# chromium_cef

./: .gitignore  .gitignore.rej  AGENTS.md  BUILD.gn  BUILD.gn.rej  BUILD.gn.rej.back_141  CODEOWNERS  Doxyfile  OAT.xml  README.OpenSource  README.en.md  README.md  VERSION.stamp  apply_cef_patchs.sh  cef_api_untracked.json  cef_api_versions.json  cef_paths.gypi  cef_paths2.gypi  chrom_cef.patch
libcef/common/mojom/: BUILD.gn  cef.mojom
ohos_cef_ext/: OAT.xml  README.md  cef_arkweb_extension.gni
ohos_cef_ext/include/: arkweb_app_ext.h  arkweb_browser_base_ext.h  arkweb_browser_ext.h  arkweb_cef_ssl_callback.h  arkweb_cef_verify_pin_callback.h  arkweb_client_ext.h  arkweb_dialog_handler_ext.h  arkweb_display_handler_ext.h  arkweb_frame_ext.h  arkweb_load_handler_ext.h  arkweb_render_handler_ext.h  arkweb_request_ext.h  arkweb_resource_request_handler_ext.h  cef_adsblock_manager.h  cef_base_nopac.h  cef_context_menu_handler_ext.h  cef_cookie_ext.h  cef_custom_media_info.h  cef_custom_media_player_delegate.h  cef_data_base.h  cef_download_item_ext.h  cef_extension_window_handler.h  cef_first_meaningful_paint_details.h  cef_form_handler.h  cef_largest_contentful_paint_details.h  cef_load_committed_details.h  cef_logger_callback_api_handler.h  cef_media_handler.h  cef_media_player_controller.h  cef_media_player_listener.h  cef_media_player_listener_for_vast.h  cef_native_embed_first_frame_paint_event.h  cef_permission_request.h  cef_permission_status_query.h  cef_request_context_for_include.h  cef_request_handler_ext.h  cef_safe_browsing_detection_callback.h  cef_version.h  cef_web_client_extension_handler.h  cef_web_extension_api_handler.h  (+3 more)
ohos_cef_ext/include/internal/: arkweb_cef_types_after_ext.h  arkweb_cef_types_pre_ext.h  cef_types_wrappers_for_include.cc  cef_types_wrappers_head_for_include.cc
ohos_cef_ext/libcef/browser/: adsblock_manager_impl.cc  adsblock_manager_impl.h  ark_web_certificate_query.cc  ark_web_certificate_query.h  ark_web_frame_host_impl.cc  ark_web_frame_host_impl.h  ark_web_javascript_dialog_manager.cc  ark_web_javascript_dialog_manager.h  arkweb_browser_contents_delegate_ext.cc  arkweb_browser_contents_delegate_ext.h  arkweb_browser_host_ext.cc  arkweb_browser_host_ext.h  arkweb_browser_info_manager_utils.cc  arkweb_browser_info_manager_utils.h  arkweb_browser_platform_delegate_ext.cc  arkweb_browser_platform_delegate_ext.h  arkweb_context_ext.cc  arkweb_context_menu_params_impl_ext.cc  arkweb_context_menu_params_impl_ext.h  arkweb_download_manager_delegate_ext.cc  arkweb_download_manager_delegate_ext.h  arkweb_download_resume_util.cc  arkweb_download_resume_util.h  arkweb_download_url_parameters_util.cc  arkweb_download_url_parameters_util.h  arkweb_error_page_auto_reloader.cc  arkweb_error_page_auto_reloader.h  arkweb_error_page_reload_reason.cc  arkweb_error_page_reload_reason.h  arkweb_file_dialog_manager_utils.cc  arkweb_file_dialog_manager_utils.h  arkweb_frame_host_impl_ext.cc  arkweb_frame_host_impl_ext.h  arkweb_global_list_config.cc  arkweb_global_list_config.h  arkweb_global_list_config_unittests.cc  arkweb_icon_helper_ext.cc  arkweb_icon_helper_ext.h  arkweb_navigation_state_serializer_ext.cc  arkweb_received_slice_helper_ext.cc  (+32 more)
ohos_cef_ext/libcef/browser/adblock/: adblock_config_bridge.cc  adblock_config_bridge.h  adblock_delegate_ohos.cc
ohos_cef_ext/libcef/browser/alloy/: alloy_browser_host_impl_ext.cc  alloy_browser_host_impl_ext.h  alloy_browser_host_impl_for_include.cc  alloy_browser_host_impl_utils.cc  alloy_browser_host_impl_utils.h  alloy_browser_ua_config.cc  alloy_browser_ua_config.h  alloy_client_cert_identity.h  alloy_client_cert_lookup_table.cc  alloy_client_cert_lookup_table.h  alloy_ssl_platform_key.h  alloy_ssl_platform_key_ohos.h  alloy_ssl_platform_u_key_ohos.h  browser_platform_delegate_alloy_for_include.cc  cef_extension_keybinding_registry_views.cc  cef_extension_keybinding_registry_views.h  cef_media_player_controller_impl.cc  cef_media_player_controller_impl.h  custom_media_player_proxy.cc  custom_media_player_proxy.h  media_player_listener_proxy.cc  media_player_listener_proxy.h  offscreen_contents_delegate.cc  offscreen_contents_delegate.h  render_process_state_handler.cc  render_process_state_handler.h
ohos_cef_ext/libcef/browser/anti_tracking/: anti_tracking_delegate_ohos.cc  third_party_cookie_access_policy.cc  third_party_cookie_access_policy.h  third_party_cookie_access_policy_unittest.cc
ohos_cef_ext/libcef/browser/autofill/: oh_autofill_client.cc  oh_autofill_client.h  oh_autofill_manager.cc  oh_autofill_manager.h  oh_autofill_provider.cc  oh_autofill_provider.h
ohos_cef_ext/libcef/browser/chrome/: chrome_browser_context_for_include.cc  chrome_browser_main_extra_parts_cef_for_include.cc  chrome_content_browser_client_cef_for_include_after.cc  chrome_content_browser_client_cef_for_include_before.cc  chrome_content_browser_client_cef_for_include_verify_pin.cc
ohos_cef_ext/libcef/browser/color_chooser/: color_chooser_ohos.cc  color_chooser_ohos.h
ohos_cef_ext/libcef/browser/content_settings/: oh_host_content_settings_observer.cc  oh_host_content_settings_observer.h  (+2 more)
ohos_cef_ext/libcef/common/: arkweb_app_manager_ext.cc  arkweb_app_manager_ext.h  arkweb_request_impl_ext.cc  arkweb_request_impl_ext.h  cef_open_devtools_ext_opt.h  resource_util_for_include.cc  resource_util_for_include_unittest.cc  soc_perf_util.cc  soc_perf_util.h  values_impl_for_include.cc
ohos_cef_ext/libcef/renderer/: arkweb_content_renderer_client_cef_ext.cc  arkweb_content_renderer_client_cef_ext.h  arkweb_content_settings_client.cc  arkweb_content_settings_client.h  arkweb_frame_impl_ext.cc  arkweb_frame_impl_ext.h  blink_glue_ex.cc  blink_glue_ex.h  blink_glue_for_include.cc  browser_impl_ext.cc  browser_impl_ext.h  chrome_safe_browsing_error_page_controller_delegate_impl.cc  chrome_safe_browsing_error_page_controller_delegate_impl.h
ohos_cef_ext/tools/: compare.config.json  stat_diff.py  test.py  utils.py
ohos_cef_ext/tools/chromium_132_log_parse/: author_info.py  chromium_132_log_parse.py
(+2074 files in other folders)
