import("//arkweb/build/features/features.gni")
if(defined(arkweb_nweb_ex) && arkweb_nweb_ex) {
  import("//arkweb/ohos_nweb_ex/build/features/features.gni")
}

libcef_arkweb_sources = [
  "//cef/ohos_cef_ext/include/arkweb_app_ext.h",
  "//cef/ohos_cef_ext/include/cef_download_item_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_host_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_host_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_info_manager_utils.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_info_manager_utils.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_file_dialog_manager_utils.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_file_dialog_manager_utils.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_frame_host_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_frame_host_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_browser_host_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_browser_host_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_browser_host_impl_utils.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_browser_host_impl_utils.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_service/cookie_manager_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_service/cookie_manager_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/net_service/net_helpers.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_service/net_helpers.h",
  "//cef/ohos_cef_ext/libcef/browser/net_service/stream_reader_url_loader_utils.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_service/stream_reader_url_loader_utils.h",
  "//cef/ohos_cef_ext/libcef/browser/chrome/extensions/arkweb_chrome_extension_util_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/chrome/extensions/arkweb_chrome_extension_util_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/global_config/global_config_prefs.cpp",
  "//cef/ohos_cef_ext/libcef/browser/global_config/global_config_prefs.h",
  "//cef/ohos_cef_ext/libcef/common/arkweb_request_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/common/arkweb_request_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/common/arkweb_app_manager_ext.cc",
  "//cef/ohos_cef_ext/libcef/common/arkweb_app_manager_ext.h",
  "//cef/ohos_cef_ext/libcef/common/cef_open_devtools_ext_opt.h",
  "//cef/ohos_cef_ext/libcef/renderer/arkweb_content_settings_client.cc",
  "//cef/ohos_cef_ext/libcef/renderer/arkweb_content_settings_client.h",
  "//cef/ohos_cef_ext/libcef/renderer/arkweb_frame_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/renderer/arkweb_frame_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/renderer/browser_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/renderer/browser_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/renderer/chrome_safe_browsing_error_page_controller_delegate_impl.cc",
  "//cef/ohos_cef_ext/libcef/renderer/chrome_safe_browsing_error_page_controller_delegate_impl.h",
  "//cef/ohos_cef_ext/libcef/renderer/arkweb_content_renderer_client_cef_ext.cc",
  "//cef/ohos_cef_ext/libcef/renderer/arkweb_content_renderer_client_cef_ext.h",

  "//cef/ohos_cef_ext/libcef/browser/arkweb_download_manager_delegate_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_download_manager_delegate_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_download_resume_util.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_download_resume_util.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_received_slice_helper_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_received_slice_helper_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/cef_download_item_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/cef_download_item_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_request_context_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_request_context_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_web_contents_view_osr_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_web_contents_view_osr_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/browser_platform_delegate_osr_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/browser_platform_delegate_osr_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/osr/browser_platform_delegate_osr_utils.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/browser_platform_delegate_osr_utils.cc",

  "//cef/ohos_cef_ext/include/arkweb_dialog_handler_ext.h",
  "//cef/ohos_cef_ext/include/arkweb_display_handler_ext.h",
  "//cef/ohos_cef_ext/include/cef_context_menu_handler_ext.h",
  "//cef/ohos_cef_ext/include/cef_request_handler_ext.h",
  "//cef/ohos_cef_ext/include/cef_native_embed_first_frame_paint_event.h",
  "//cef/ohos_cef_ext/include/cef_web_client_extension_handler.h",
  "//cef/ohos_cef_ext/libcef/browser/adsblock_manager_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/adsblock_manager_impl.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_browser_ua_config.cc",
  "//cef/ohos_cef_ext/libcef/browser/alloy_browser_ua_config.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_client_cert_identity.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_client_cert_lookup_table.cc",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_client_cert_lookup_table.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/alloy_ssl_platform_key.h",
  "//cef/ohos_cef_ext/libcef/browser/alloy/cef_extension_keybinding_registry_views.cc",
  "//cef/ohos_cef_ext/libcef/browser/alloy/cef_extension_keybinding_registry_views.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_contents_delegate_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_contents_delegate_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_platform_delegate_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_browser_platform_delegate_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_context_menu_params_impl_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_context_menu_params_impl_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_touch_handle_drawable_osr_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_touch_handle_drawable_osr_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_context_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_icon_helper_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_icon_helper_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_navigation_state_serializer_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/arkweb_navigation_state_serializer_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_gin_javascript_bridge_dispatcher_host.cc",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_gin_javascript_bridge_dispatcher_host.h",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_gin_javascript_bridge_message_filter.cc",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_gin_javascript_bridge_message_filter.h",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_gin_javascript_bridge_object_deletion_message_filter.cc",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_gin_javascript_bridge_object_deletion_message_filter.h",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_javascript_injector.cc",
  "//cef/ohos_cef_ext/libcef/browser/javascript/oh_javascript_injector.h",
  "//cef/ohos_cef_ext/libcef/browser/load_committed_details_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/load_committed_details_impl.h",

  "//cef/ohos_cef_ext/libcef/browser/alloy/render_process_state_handler.cc",
  "//cef/ohos_cef_ext/libcef/browser/alloy/render_process_state_handler.h",

  "//cef/ohos_cef_ext/libcef/browser/devtools/devtools_manager_delegate.cc",
  "//cef/ohos_cef_ext/libcef/browser/devtools/devtools_manager_delegate.h",

  "//cef/ohos_cef_ext/libcef/browser/net/ohos_applink_throttle.h",
  "//cef/ohos_cef_ext/libcef/browser/net/ohos_applink_throttle.cc",
  "//cef/ohos_cef_ext/libcef/browser/net/ohos_net_export_ui.cc",
  "//cef/ohos_cef_ext/libcef/browser/net/ohos_net_export_ui.h",

  "//cef/ohos_cef_ext/libcef/browser/net/extra_headers_throttle.h",
  "//cef/ohos_cef_ext/libcef/browser/net/extra_headers_throttle.cc",

  "//cef/ohos_cef_ext/libcef/browser/prefs/arkweb_browser_prefs_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/prefs/arkweb_browser_prefs_ext.h",

  "//cef/ohos_cef_ext/libcef/browser/net_database/cef_data_base_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_database/cef_data_base_impl.h",
  "//cef/ohos_cef_ext/libcef/browser/net_database/cef_incognito_data_base_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_database/cef_incognito_data_base_impl.h",
  "//cef/ohos_cef_ext/libcef/browser/net_service/arkweb_proxy_config_monitor.cc",
  "//cef/ohos_cef_ext/libcef/browser/net_service/arkweb_proxy_config_monitor.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_render_widget_host_view_osr_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_render_widget_host_view_osr_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_render_widget_host_view_osr_utils.cc",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_render_widget_host_view_osr_utils.h",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_touch_selection_controller_client_osr_ext.cc",
  "//cef/ohos_cef_ext/libcef/browser/osr/arkweb_touch_selection_controller_client_osr_ext.h",
  "//cef/ohos_cef_ext/libcef/browser/page_load_metrics/arkweb_alloy_page_load_metrics_memory_tracker_factory.cc",
  "//cef/ohos_cef_ext/libcef/browser/page_load_metrics/arkweb_alloy_page_load_metrics_memory_tracker_factory.h",
  "//cef/ohos_cef_ext/libcef/browser/page_load_metrics/arkweb_page_load_metrics_initialize.cc",
  "//cef/ohos_cef_ext/libcef/browser/page_load_metrics/arkweb_page_load_metrics_initialize.h",
  "//cef/ohos_cef_ext/libcef/browser/page_load_metrics/arkweb_page_load_metrics_observer.cc",
  "//cef/ohos_cef_ext/libcef/browser/page_load_metrics/arkweb_page_load_metrics_observer.h",
  "//cef/ohos_cef_ext/libcef/browser/report_manager.cc",
  "//cef/ohos_cef_ext/libcef/browser/report_manager.h",
  "//cef/ohos_cef_ext/libcef/browser/res_reporter.cc",
  "//cef/ohos_cef_ext/libcef/browser/res_reporter.h",
  "//cef/ohos_cef_ext/libcef/browser/storage/web_storage_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/storage/web_storage_impl.h",
  "//cef/ohos_cef_ext/libcef/browser/first_meaningful_paint_details_impl.h",
  "//cef/ohos_cef_ext/libcef/browser/first_meaningful_paint_details_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/largest_contentful_paint_details_impl.h",
  "//cef/ohos_cef_ext/libcef/browser/largest_contentful_paint_details_impl.cc",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_errors.cc",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_errors.h",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_message_generator.cc",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_message_generator.h",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_messages.h",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_value.cc",
  "//cef/ohos_cef_ext/libcef/common/javascript/oh_gin_javascript_bridge_value.h",
  "//cef/ohos_cef_ext/libcef/common/soc_perf_util.cc",
  "//cef/ohos_cef_ext/libcef/common/soc_perf_util.h",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_bridge_dispatcher.cc",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_bridge_dispatcher.h",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_bridge_object.cc",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_bridge_object.h",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_bridge_value_converter.cc",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_bridge_value_converter.h",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_function_invocation_helper.cc",
  "//cef/ohos_cef_ext/libcef/renderer/javascript/oh_gin_javascript_function_invocation_helper.h",
  "//cef/ohos_cef_ext/libcef/renderer/extensions/ohos_print_render_frame_helper_delegate.cc",
  "//cef/ohos_cef_ext/libcef/renderer/extensions/ohos_print_render_frame_helper_delegate.h",
  "//cef/ohos_cef_ext/libcef/browser/printing/ohos_print_manager.cc",
  "//cef/ohos_cef_ext/libcef/browser/printing/ohos_print_manager.h",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_geolocation_access.cc",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_geolocation_access.h",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_permission_manager.cc",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_permission_manager.h",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_permission_request_handler.cc",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_permission_request_handler.h",
  "//cef/ohos_cef_ext/libcef/browser/permission/alloy_access_request.cc",
  "//cef/ohos_cef_ext/libcef/browser/permission/offscreen_permission_request_handler.cc",
  "//cef/ohos_cef_ext/libcef/browser/permission/offscreen_permission_request_handler.h",
  "//cef/ohos_cef_ext/libcef/browser/ermission/alloy_access_request.h",
  "//cef/ohos_cef_ext/libcef/browser/policy/browser_policy_handler.cc",
  "//cef/ohos_cef_ext/libcef/browser/policy/browser_policy_handler.h",
  "//cef/ohos_cef_ext/libcef/browser/web_client_extension/alloy_native_embed_first_frame_paint_event.cc",
  "//cef/ohos_cef_ext/libcef/browser/web_client_extension/alloy_native_embed_first_frame_paint_event.h",
  "//cef/ohos_cef_ext/libcef/browser/useragent/ua_push_config.cc",
  "//cef/ohos_cef_ext/libcef/browser/useragent/ua_push_config.h",
  "//cef/ohos_cef_ext/libcef/browser/password/oh_password_store_factory.cc",
  "//cef/ohos_cef_ext/libcef/browser/password/oh_password_store_factory.h",
  "//cef/ohos_cef_ext/libcef/browser/password/oh_password_store_backend_factory.cc",

  "//cef/ohos_cef_ext/libcef/browser/ark_web_frame_host_impl.cc",
  "//cef/ohos_cef_ext/libcef/browser/ark_web_frame_host_impl.h",

  "//cef/ohos_cef_ext/libcef/browser/net/ohos_url_rewrite_controller.h",
  "//cef/ohos_cef_ext/libcef/browser/net/ohos_url_rewrite_controller.cc",
]
if (defined(arkweb_logger_report) && arkweb_logger_report) {
  libcef_arkweb_sources += [
    "//cef/ohos_cef_ext/include/cef_logger_callback_api_handler.h",
  ]
}
if (defined(arkweb_devtools) && arkweb_devtools) {
  libcef_arkweb_sources += [
    "//cef/ohos_cef_ext/libcef/browser/devtools/arkweb/devtools_message_handler.cc",
    "//cef/ohos_cef_ext/libcef/browser/devtools/arkweb/devtools_message_handler.h",
    "//cef/ohos_cef_ext/libcef/browser/devtools/arkweb/devtools_frontend.cc",
    "//cef/ohos_cef_ext/libcef/browser/devtools/arkweb/devtools_frontend.h",
  ]
}

if (defined(arkweb_useragent) && arkweb_useragent) {
  libcef_arkweb_sources += [
    "//cef/ohos_cef_ext/libcef/browser/useragent/arkweb_useragent_utils.cc",
    "//cef/ohos_cef_ext/libcef/browser/useragent/arkweb_useragent_utils.h",
  ]
}

arkweb_url_trust_list_sources = [
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_block_page.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_controller_client.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_prefs.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_url_trust_list_manager.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_url_trust_list_navigation_throttle.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_safe_browsing_response.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_block_page.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_controller_client.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_prefs.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_threat_type.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_url_trust_list_interface.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_url_trust_list_manager.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_url_trust_list_navigation_throttle.h",
]

arkweb_anti_tracking_source = [
  "//cef/ohos_cef_ext/libcef/browser/anti_tracking/third_party_cookie_access_policy.cc",
  "//cef/ohos_cef_ext/libcef/browser/anti_tracking/third_party_cookie_access_policy.h",
]

arkweb_anti_tracking_placeholder_source = [
  "//cef/ohos_cef_ext/libcef/browser/anti_tracking/anti_tracking_delegate_ohos.cc",
]
arkweb_safebrowsing_sources = [
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_client.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_client.h",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_malicious_allowlist.cc",
  "//cef/ohos_cef_ext/libcef/browser/ohos_safe_browsing/ohos_sb_malicious_allowlist.h",
]

arkweb_libcef_render_sources = [
  "//cef/ohos_cef_ext/libcef/renderer/blink_glue_ex.cc",
  "//cef/ohos_cef_ext/libcef/renderer/blink_glue_ex.h",
]

if (defined(arkweb_adblock) && arkweb_adblock) {
  arkweb_adblock_placeholder_source = [ "//cef/ohos_cef_ext/libcef/browser/adblock/adblock_delegate_ohos.cc" ]

  arkweb_adblock_source = [
    "//cef/ohos_cef_ext/libcef/browser/adblock/adblock_config_bridge.cc",
    "//cef/ohos_cef_ext/libcef/browser/adblock/adblock_config_bridge.h",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_content_subresource_filter_web_contents_helper_factory.cc",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_content_subresource_filter_web_contents_helper_factory.h",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_list.cc",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_list.h",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_ruleset_manager.cc",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_ruleset_manager.h",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_safe_browsing_database_manager_impl.cc",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/adblock_safe_browsing_database_manager_impl.h",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/user_adblock_ruleset_manager.cc",
    "//cef/ohos_cef_ext/libcef/browser/subresource_filter/user_adblock_ruleset_manager.h",
  ]
}
