# Copyright 2021 The Chromium Embedded Framework Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "cef.mojom" ]

  cpp_only = true
  disable_variants = true

  public_deps = [
    "//content/public/common:interfaces",
    "//mojo/public/mojom/base",
    "//services/network/public/mojom:cookies_mojom",
    "//services/network/public/mojom:url_loader_base",
    "//third_party/blink/public/mojom:mojom_platform",
    "//ui/gfx/geometry/mojom",
    "//url/mojom:url_mojom_gurl",
  ]

  overridden_deps = [
    "//content/public/common:interfaces",
    "//third_party/blink/public/mojom:mojom_platform",
  ]

  component_deps = [ "//content/public/common" ]
  enabled_features = []
  if (is_arkweb) {
    enabled_features += [ "is_arkweb" ]
    enabled_features += [ "arkweb_input_events" ]
    enabled_features += [ "arkweb_terminate_render" ]
    enabled_features += [ "arkweb_clipboard" ]
    enabled_features += [ "arkweb_get_scroll_offset" ]
    enabled_features += [ "arkweb_network_base" ]
    enabled_features += [ "arkweb_media" ]
    enabled_features += [ "arkweb_resource_interception" ]
    enabled_features += [ "arkweb_optimize_parser_budget" ]
    enabled_features += [ "arkweb_scrollbar" ]
    enabled_features += [ "arkweb_error_page" ]
    if(arkweb_performance_scheduling) {
      enabled_features += [ "arkweb_performance_scheduling" ]
    }
  }
  if (arkweb_blank_optimize) {
    enabled_features += [ "arkweb_blank_optimize" ]
  }
}
